[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://RootScenes/AvatarSelect/CreateAvatarModalController.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/MainMenu/AvatarOutfitManager/CreateAvatarOutfitManager.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.34902, 0.184314, 0.164706, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 48

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.313726, 0.2, 0.207843, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 48

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.631373, 0.4, 0.368627, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 48

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.819608, 0.639216, 0.643137, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 48

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.92549, 0.737255, 0.705882, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )
width = 48

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.772549, 0.54902, 0.521569, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )
width = 48

[node name="CreateAvatarModal" type="ConfirmationDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.0
margin_top = -263.0
margin_right = 206.0
margin_bottom = 233.0
rect_clip_content = true
theme = ExtResource( 1 )
window_title = "Create Avatar"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 517.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Create Your Avatar"
align = 1

[node name="Container" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 517.0
margin_bottom = 92.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/Container"]
margin_top = 3.0
margin_right = 124.0
margin_bottom = 29.0
text = "Avatar Name"

[node name="TextEdit" type="LineEdit" parent="VBoxContainer/Container"]
margin_left = 136.0
margin_right = 517.0
margin_bottom = 33.0

[node name="Container2" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 517.0
margin_bottom = 144.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/Container2"]
margin_top = 11.0
margin_right = 126.0
margin_bottom = 37.0
text = "Melanin     "

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Container2"]
margin_left = 138.0
margin_right = 517.0
margin_bottom = 48.0
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 3 )
expand = true

[node name="TextureButton9" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 5 )
expand = true

[node name="TextureButton10" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 7 )
expand = true

[node name="TextureButton12" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 9 )
expand = true

[node name="TextureButton13" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 11 )
expand = true

[node name="TextureButton14" type="TextureButton" parent="VBoxContainer/Container2/GridContainer"]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = SubResource( 13 )
expand = true

[node name="CreateAvatarOutfitManager" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 148.0
margin_right = 517.0
margin_bottom = 148.0
[connection signal="confirmed" from="." to="." method="confirmed"]
[connection signal="text_changed" from="VBoxContainer/Container/TextEdit" to="." method="avatar_name_updated"]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton" to="." method="on_color_rect_click" binds= [ 5 ]]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton9" to="." method="on_color_rect_click" binds= [ 4 ]]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton10" to="." method="on_color_rect_click" binds= [ 6 ]]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton12" to="." method="on_color_rect_click" binds= [ 3 ]]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton13" to="." method="on_color_rect_click" binds= [ 1 ]]
[connection signal="button_up" from="VBoxContainer/Container2/GridContainer/TextureButton14" to="." method="on_color_rect_click" binds= [ 2 ]]
